Update spaces table and edit popover
